force-app/main/default/objects/rstk__woorddmd__c/fields/FMG_OH_Over_Under__c.field-meta.xml
<CustomField>
    <fullName>FMG_OH_Over_Under__c</fullName>
    <formula>FMG_On_Hand_Qty__c - rstk__woorddmd_qtyoutstdg__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OH Over-Under</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>