force-app/main/default/objects/rstk__woorddmd__c/fields/FMG_Short_Flag__c.field-meta.xml
<CustomField>
    <fullName>FMG_Short_Flag__c</fullName>
    <formula>IF( FMG_OH_Over_Under__c &lt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>