force-app/main/default/objects/rstk__woorddmd__c/fields/IDWO__c.field-meta.xml
<CustomField>
    <fullName>IDWO__c</fullName>
    <formula>rstk__woorddmd_ordno__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDWO</label>
    <type>Text</type>
</CustomField>