force-app/main/default/objects/rstk__woorddmd__c/listViews/Planned_WO_Component_Demand.listView-meta.xml
<ListView>
    <fullName>Planned_WO_Component_Demand</fullName>
    <columns>NAME</columns>
    <columns>rstk__woorddmd_ordno__c</columns>
    <columns>rstk__woorddmd_compitem__c</columns>
    <columns>rstk__woorddmd_qtyreq__c</columns>
    <columns>rstk__woorddmd_qtyiss__c</columns>
    <columns>rstk__woorddmd_qtyoutstdg__c</columns>
    <columns>FMG_On_Hand_Qty__c</columns>
    <columns>FMG_OH_Over_Under__c</columns>
    <columns>FMG_Short_Flag__c</columns>
    <columns>rstk__woorddmd_dmdsts_pl__c</columns>
    <columns>rstk__woorddmd_dtereqd__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FMG_Short_Flag__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>rootstock__LUI_Due_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>5/1/2024</value>
    </filters>
    <filters>
        <field>rootstock__LUI_Status__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Planned WO Component Demand</label>
</ListView>